--- a/src/app/pages/notifications/notifications.component.scss
+++ b/src/app/pages/notifications/notifications.component.scss
@@ -177,6 +177,12 @@
       }
     }
 
+    .notification-message {
+      font-size: 14px;
+      opacity: 0.8;
+      line-height: 1.4;
+    }
+
     .notification-meta {
       display: flex;
       align-items: center;
